# rustainer

./: .gitignore  Cargo.minimal.toml  Cargo.toml  Dockerfile  README.md  ROADMAP.md  askama.toml  build.rs  docker-compose.yml  reset_admin.rs  reset_admin.sql
data/: rustainer.db
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ComposeStackDetail.tsx  ComposeStackEditor.tsx  ComposeStackList.tsx  ContainerDetail.tsx  ContainerList.tsx  CreateContainer.tsx  CreateService.tsx  Login.tsx  NetworkDetail.tsx  NetworkList.tsx  ServiceDetail.tsx  ServiceList.tsx  TemplateDetail.tsx  TemplateEditor.tsx  TemplateList.tsx  UserManagement.tsx  VolumeList.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/: app_state.rs  config.rs  main.minimal.rs  main.new.rs  main.rs  main_simplified.rs
src/api/: applications.rs  compose.rs  containers.rs  images.rs  mod.rs  networks.rs  proxy.rs  services.rs  templates.rs  volumes.rs
src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs
src/auth/handlers/: mod.rs
src/auth/middleware/: mod.rs
src/auth/models/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/db/migrations/: 20250414000000_create_users_table.sql  20250417000000_create_services_table.sql
src/docker/: compose.rs  containers.rs  mod.rs  networks.rs  services.rs  templates.rs  volumes.rs
src/models/: application.rs  compose.rs  container.rs  mod.rs  network.rs  service.rs  template.rs  user.rs
src/proxy/: mod.rs
src/static/: application_create.html  applications.html  container_create.html  containers.html  dashboard.html  image_create.html  images.html  index.html  login.html  settings.html  user-management.html
src/static/css/: index.css  styles.css
src/static/js/: env-vars-edit.js  env-vars.js  main.js  websocket.js
src/templates/: filters.rs  mod.rs
src/templates/layouts/: base.html
src/templates/pages/: basic.html  compose_detail.html  compose_editor.html  compose_list.html  container_list.html  login.html  service_detail.html  service_editor.html  service_list.html  service_list_simple.html  simple_editor.html  simple_env.html  simple_list.html  simple_service.html  test.html
src/web/: app_state.rs  applications.rs  compose_handlers.rs  container_handlers.rs  handlers.rs  mod.rs  service_handlers.rs  test_handler.rs
src/websocket/: docker_events.rs  mod.rs
