[package]
name = "rustainer"
version = "0.1.0"
edition = "2021"
description = "A lightweight container management UI built in Rust"
authors = ["Andrew O", "Rustainer Team"]

[dependencies]
# HTTP server and routing
axum = { version = "0.6.18", features = ["headers", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "trace", "fs", "auth"] }

# Docker API client
bollard = "0.14.0"
# Docker Compose support
serde_yaml = "0.9.21"
compose_spec = "0.1.0"

# Async runtime
tokio = { version = "1.28.2", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Error handling
thiserror = "1.0.40"
anyhow = "1.0.71"

# Utilities
chrono = { version = "0.4.24", features = ["serde"] }
futures = "0.3.28"
async-stream = "0.3.5"

# Authentication
jsonwebtoken = "8.3.0"
argon2 = "0.5.0"
rand = "0.8.5"

# Database
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid", "json"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }

# Configuration
config = "0.13.3"
dotenv = "0.15.0"