[package]
name = "rustainer"
version = "0.1.0"
edition = "2021"
description = "A lightweight container management UI built in Rust"
authors = ["Andrew O", "Rustainer Team"]

[dependencies]
# HTTP server and routing
axum = { version = "0.6.18", features = ["headers", "macros", "form", "ws"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "trace", "fs", "auth"] }
tokio-tungstenite = "0.19.0"

# Templating
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.3"

# Docker API client
bollard = "0.19.0-rc1"

# Async runtime
tokio = { version = "1.28.2", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "chrono", "uuid"] }

# Authentication
jsonwebtoken = "8.3"
argon2 = "0.5"

# Utilities
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
[package.metadata.askama]
dir = "src/templates"
output_dir = "target/templates"

[[bin]]
name = "reset_admin"
path = "src/bin/reset_admin.rs"
output_dir = "target/templates"